--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -490,10 +490,9 @@ li p, .fs-postcontent li p, .fs-blockcontent li p {
 .fs-header {
     margin: 0 auto;
     height: 100px;
-    background-image: url('/images/template/object1688855322.png');
-    /*
-   background-image: url('/images/template/object1688855322.png'), url('/images/template/header.jpg');    */
-    background-position: 12px 0, center top;
+    background-image: url('/images/template/object_testa.png');
+    /*    background-image: url('/images/template/object1688855322.png'), url('/images/template/header.jpg');   */
+    background-position: 0 0, center top;
     background-repeat: no-repeat;
     position: relative;
     z-index: auto !important;
