--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -123,6 +123,7 @@
                   <div style="width:98%; margin-left: 7px;" >
                    <%= f.select :cross_organization_id, options_for_select(CrossOrganization.find(
                                                                                       :all,
+                                                                                      :conditions => "se_visibile = 1",
                                                                                       :joins => [:type_organization],
                                                                                       :order => 'type_organizations.tipo, sigla').collect { |c| ["#{c.type_organization.tipo} :: #{c.sigla}", c.id] }),
                                                                                       :include_blank => true,
