--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -150,9 +150,9 @@
         <% end %>
       </div>
     </header>
-
+    <div class="fs-responsive-loginbg"></div>
     <nav class="fs-nav clearfix">
-      <%= render_navigation(:level => 1) %>
+      <%= render_navigation(:context=> 'giallo') %>
     </nav>
 
     <aside class="fs-tramenu-wrapper">
@@ -160,7 +160,7 @@
     </aside>
 
     <nav class="fs-menu2-nav clearfix">
-      <%= render_navigation(:level => 2..3, :expand_all => true) %>
+      <%= render_navigation(:context=> 'rosso', :level => 1..2, :expand_all => true) %>
     </nav>
     <div class="clearfix"></div>
     <div id="fs-flash" style="display:none;">
