--- a/app/views/cross_organizations/index.html.erb
+++ b/app/views/cross_organizations/index.html.erb
@@ -7,8 +7,8 @@
       <thead>
       <tr>
         <th style='width: 35px;'></th>
-        <%= sort_header_tag('type_organization', :title => l(:label_type_organization), :style => 'width: 30%;text-align:left;') %>
-        <%= sort_header_tag('sigla', :title => l(:label_sigla), :style => 'color:red; width: 25%;') %>
+        <%= sort_header_tag('type_organization', :title => l(:label_type_organization), :style => 'width: 30%; text-align:left;') %>
+        <%= sort_header_tag('sigla', :title => l(:label_sigla), :style => 'width: 50%; text-align:left;') %>
         <%= sort_header_tag('se_visibile', :title => l(:label_se_visibile), :style => 'width: 5%;') %>
         <th style='width: 5%;'></th>
         <th style='width: 5%;'></th>
