--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -22,10 +22,19 @@ table td {padding: 0; margin: 0; border: none;}
 <td>
 <%# Pre Email %>
 <table cellpadding="0" cellspacing="0" width="640">
+  <tr>
+    <td valign="bottom" height="40" align="center">
+      <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:11px; color:#ffffff;">
+        NEWSLETTER FISCOSPORT - Puoi consultare l'Edizione &nbsp;
+        <%= link_to(@project.description, url_for(defurl+ edizione_path + @project.id.to_s), :class => "newwin", :style => 'color:#fff;', :target => '_blank') %>
+        direttamente online.
+      </font>
+    </td>
+  </tr>
 <tr>
   <td valign="bottom" height="40" align="center">
-    <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:11px; color:#ffffff;">
-      NEWSLETTER FISCOSPORT - Puoi consultare l'Edizione &nbsp;
+    <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:10px; color:#bebebe;">
+      se non vuoi più ricevere la newsletter clicca qui
       <%= link_to(@project.description, url_for(defurl+ edizione_path + @project.id.to_s), :class => "newwin", :style => 'color:#fff;', :target => '_blank') %>
       direttamente online.
     </font>
@@ -185,7 +194,7 @@ table td {padding: 0; margin: 0; border: none;}
 <tr>
   <td valign="top" height="80" align="center">
     <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:11px; color:#ffffff;">
-      &nbsp;
+      <%= Setting.footer_fs %>
     </font>
   </td>
 </tr>
