--- a/app/views/type_organizations/index.html.erb
+++ b/app/views/type_organizations/index.html.erb
@@ -7,7 +7,7 @@
     <table class="list type_organizations">
       <thead><tr>
         <%= sort_header_tag('tipo', :title => l(:label_tipo), :style => 'width: 70%;text-align:left;')%>
-        <%= sort_header_tag('priorita', :title => l(:label_priorita), :style => 'width: 20%;text-align:left;')%>
+        <%= sort_header_tag('se_sportivo', :title => l(:field_type_organization_sport), :style => 'width: 20%;text-align:left;')%>
         <th style='width: 5%;'></th>
         <th style='width: 5%;'></th>
       </tr></thead>
@@ -15,7 +15,7 @@
       <% @type_organizations.each do |type_organization| %>
           <tr class="<%= cycle 'odd', 'even' %>">
             <td><%= link_to h(type_organization.tipo), type_organization_path(type_organization) %></td>
-            <td align="right"><%=h type_organization.priorita %></td>
+            <td align="left"><%= check_box_tag '','type_sport',type_organization.type_sport, :disabled => 'disabled' %></td>
             <td class="buttons"><%= link_to('', edit_type_organization_path(type_organization), :class => 'icon icon-edit') if User.current.admin? %></td>
             <td class="buttons"><%= link_to ('', type_organization, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
           </tr>
