--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -123,14 +123,14 @@
                   <div style="width:98%; margin-left: 7px;" >
                    <%= f.select :cross_organization_id, options_for_select(CrossOrganization.find(:all,
                                                                                       :include => :type_organization,
-                                                                                      :conditions => "se_visibile = 1 AND #{TypeOrganization.table_name}.type_sport = 1" ,
+                                                                                      :conditions => "se_visibile = 1 OR #{TypeOrganization.table_name}.type_sport = 1" ,
                                                                                       :joins => [:type_organization],
                                                                                       :order => 'type_organizations.tipo, sigla').collect { |c| ["#{c.type_organization.tipo} :: #{c.sigla}", c.id] }),
                                                                                       :include_blank => true,
                                                                                       :required => false %>
 
                     <p style="padding: 1px 20px;">
-                      <% TypeOrganization.all.each do |tipo| %>
+                      <% TypeOrganization.find(:all, :conditions => 'type_sport = 1').each do |tipo| %>
                           <small><%= tipo.descrizione %></small>
                           &nbsp; &nbsp;&nbsp;&nbsp;
                       <% end %>
