--- a/app/views/type_organizations/show.html.erb
+++ b/app/views/type_organizations/show.html.erb
@@ -17,7 +17,7 @@
     <% end %>
     </p>
     <p>
-      <%= l(:label_priorita) %>: <%=h @type_organization.priorita %>
+      <%= l(:field_type_organization_sport ) %>: <%=h @type_organization.type_sport %>
     </p>
   </fieldset>
 </div>
