--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -68,7 +68,7 @@
 
           <% else %>
               <br/>
-              <p class="nodata"><%= l(:label_no_data) %></p>
+              <p class="nodata"><%= l(:label_no_art) %></p>
               <br/>
           <% end %>
         </article> &nbsp; <br/>
@@ -84,7 +84,7 @@
   <% else %>
     <br/>
 
-    <p class="nodata"><%= l(:label_no_data) %></p>
+    <p class="nodata"><%= l(:label_no_art) %></p>
     <br/>
   <% end %>
   <div class="clearfix"></div>
