--- a/app/views/newsletters/massmailer.html.erb
+++ b/app/views/newsletters/massmailer.html.erb
@@ -1,5 +1,5 @@
 <style type="text/css" xmlns="http://www.w3.org/1999/html">
-table, ul.fs-hmenu, #fs-main { font-family: Segoe UI }
+table, ul.fs-hmenu, #fs-main { font-family: "Segoe UI" }
 .notice, .error { height: auto; margin-top: 0px; padding-top: 0px;}
 </style>
 <script type="text/javascript" charset="utf-8">
