fix event reservations show always

--- a/app/views/editorial/evento.html.erb
+++ b/app/views/editorial/evento.html.erb
@@ -83,7 +83,7 @@
                 </div>
 
               </div>
-              <% if  @convegno.show_reservation? %>
+              <% if  @convegno.show_reservation? && User.current.logged? %>
                   <div class="fs-convegni-prenota">
                     <%= render :partial => 'reservation' %>
                   </div>
