--- a/app/views/conventions/show.html.erb
+++ b/app/views/conventions/show.html.erb
@@ -23,17 +23,17 @@
     <p><label>
       <%= l(:label_data_scadenza) %></label>
       <% if @conv.data_scadenza %>
-        <% if DateTime.now > @conv.data_scadenza %>
-          <span class="scadenza-ko"> <%= format_date(@conv.data_scadenza) %> </span>
-        <% elsif @conv.data_scadenza < (DateTime.now + Setting.renew_days.to_i.days) %>
-          <span class="scadenza-renewing"><%= format_date(@conv.data_scadenza) %></span>
-        <% else  %>
-          <span class="scadenza-ok"><%= format_date(@conv.data_scadenza) %> </span>
-        <% end  %>
-      <% else  %>
-        <span class="scadenza-none">Senza data di scadenza  </span>
-      <% end  %>
-   </p>
+          <% if DateTime.now > @conv.data_scadenza %>
+              <span class="scadenza-ko"> <%= format_date(@conv.data_scadenza) %> </span>
+          <% elsif @conv.data_scadenza < (DateTime.now + Setting.renew_days.to_i.days) %>
+              <span class="scadenza-renewing"><%= format_date(@conv.data_scadenza) %></span>
+          <% else %>
+              <span class="scadenza-ok"><%= format_date(@conv.data_scadenza) %> </span>
+          <% end %>
+      <% else %>
+          <span class="scadenza-none">Senza data di scadenza  </span>
+      <% end %>
+    </p>
 
     <p><label><%= l(:label_richiedinumeroregistrazione) %></label><span>
         <%= check_box_tag '', 1, @conv.richiedinumeroregistrazione, :disabled => 'disabled' %>
@@ -148,23 +148,12 @@
   </fieldset>
 </div>
 <div class="splitcontentright">
-  <!--
-  <fieldset class="box tabular">
-    <legend><%# l(:label_referente) %></legend>
-    <%# if @conv.user %>
-        <p>
-          <%# link_to h(@conv.user) unless User.current.admin? %>
-          <%# link_to h(@conv.user), edit_user_path(:id => @conv.user) unless !User.current.admin? %>
-        </p>
-
-        <p>
-          <%# check_box_tag '', 0, @conv.havePowerUser?, :disabled => 'disabled' %> <%# l(:label_power_user) %>
-        </p>
-    <%# else %>
-        <p class="nodata"><%#l(:label_no_referente) %></p>
-    <%# end %>
-  </fieldset>
--->
+  <% unless @uprole.nil? %>
+      <fieldset class="box ">
+        <legend><%= l(:label_conventions_uprole) %></legend>
+        <%= raw @uprole.html_safe %>
+      </fieldset>
+  <% end %>
   <fieldset class="box tabular">
     <legend><%= l(:label_conventions_users) %></legend>
     <% non_paganti = @conv.users %>
@@ -195,9 +184,10 @@
                   <%= check_box_tag '', 0, user.power_user, :disabled => 'disabled' %>
                 </td>
 
-              <td>
-              <%= link_to('', edit_user_path(user.id ), :class => 'icon icon-edit') if User.current.admin? %>
-              </td></tr>
+                <td>
+                  <%= link_to('', edit_user_path(user.id), :class => 'icon icon-edit') if User.current.admin? %>
+                </td>
+              </tr>
           <% end %>
           </tbody>
         </table>
