errori di stampa

--- a/app/views/account/lost_password.html.erb
+++ b/app/views/account/lost_password.html.erb
@@ -23,11 +23,7 @@
           <h6 class="accordion-basic"> &nbsp;&nbsp;&nbsp;&nbsp; Non ricordo più i dati di login ma ricordo la mail</h6>
 
           <div class="fs-helpme-content">
-            <p> Per recuperare i tui dati è necessario conoscere la mail che usi su Fiscoport quella alla quale ti
-              vengono recapitate le newsletter e le cominucazioni.
-              La procedura ti invierà una mail alla casella di posta specificata dove trovera il tuo login inoltre
-              potrai
-              cambiare la tua password.
+            <p> Per recuperare i tuoi dati è necessario conoscere la mail che usi su Fiscoport, quella alla quale ti vengono recapitate le newsletter e le comunicazioni. La procedura ti invierà una mail dove troverai l'indicazione del tuo Login, oltre al collegamento per modificare la password se lo desideri.
             </p>
             <br/>
 
@@ -55,14 +51,13 @@
               Se non sei riuscito a recuperare il tuo indirizzo mail occorre necessariamente contattare Fiscosport.
               <br/> Le informazioni le puoi trovare in alto a destra premendo il pulsante
               "Contattaci".
-              Se invii una mail ricordati di specificare il tuo nome e cognome , la città, la username , l'associazione
+              Se invii una mail ricordati di specificare il tuo nome e cognome, la città, la username, l'associazione
               sportiva
               o comunque qualunque dato che consenta a Fiscosport di identificarti univocamente tra tutti gli utenti.
             </p>
             <br/>
           </div>
-          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Ritengo che qualcun'altro sta utilizzando il mio
-            account</h6>
+          <h6 class="accordion-basic">&nbsp;&nbsp;&nbsp;&nbsp; Ritengo che qualcun altro stia utilizzando il mio account</h6>
 
           <div class="fs-helpme-content">
             <br/>
@@ -74,7 +69,7 @@
             <strong> Non posso accedere al sito </strong>
 
             <p>
-              E' necessario provare a cambiare la password la procedura è descritta nell'opzione : Vorrei cambiare la
+              E' necessario provare a cambiare la password la procedura è descritta nell'opzione: Vorrei cambiare la
               mia password. <br/>
               Se hai ancora problemi e non sei riuscito ad accedere occorre contattare Fiscosport.
               <br/> Tutte le informazioni le puoi trovare in alto a destra premendo il pulsante "Contattaci".
@@ -86,8 +81,8 @@
           <div class="fs-helpme-content">
             <br>
             <p>
-              Inserisci la tua mail nel campo sotto e premi invio . A breve riceverai una mail con indicata la procedura
-              per il cambio password .
+              Inserisci la tua mail nel campo sotto e premi invio. A breve riceverai una mail con indicata la procedura
+              per il cambio password.
             </p>
             <br/>
             <% form_tag({:action => "lost_password"}, {:class => "fs-lost_password"}) do %>
