--- a/app/views/services/webdesigner.html.erb
+++ b/app/views/services/webdesigner.html.erb
@@ -38,18 +38,10 @@
             <h3 style="color:#016285;">Ringraziamenti</h3>
           </div>
           <br/>
-
           <p> Un grazie a tutti i collaboratori / redattori / manager di Fiscosport che utilizzano questo sito per
-            creare le edizioni che saranno pubblicate ogni 15 giorni, grazie alle associazioni aderenti e tutti gli
+            creare le edizioni che sono pubblicate ogni 15 giorni, grazie alle associazioni aderenti e a tutti gli
             utenti di Fiscosport</p>
           <br/>
-
-          <p>Un ringraziamento particolare và
-            a <%= link_to 'Maria Cristina Dalbosco', profile_show_path(:id => 980190963) %>  "Amministratore unico e
-            Fiscosport Responsabile di Redazione" per aver voluto, organizzato e collaborato con tutti e con noi per
-            creare il sito
-            come è ora</p>
-
         </div>
       </td>
     </tr>
