agiustamenti articolo new / show / e quesito assegnazione

--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -81,6 +81,10 @@
         <% end %>
       </fieldset>
   <% end %>
+     <% if  @issue.description.blank? || @issue.description.nil?  %>
+      <div id="issue_showinfo"> <p> Questo articolo non ha un contenuto ...</p> <br />
+      <%= link_to(l(:button_issue_empty), edit_issue_path(@issue), :class => "button-blu") unless @issue.is_public_fs? %> <br />
+      </div><% end %>
   <% if @issue.description? || @issue.attachments.any? -%>
       <p><strong>
         <% if @issue.is_quesito? %>
@@ -95,9 +99,12 @@
           </div>
 
           <fieldset class="htmldraft">
+
             <legend></legend>
-            <% unless @issue.description.nil? %>
+            <% if !@issue.description.blank? %>
                 <%= @issue.description.html_safe %>
+                <% else  %>
+
             <% end %>
           </fieldset>
       <% end %>
@@ -113,20 +120,23 @@
 
   <br/> <!-- bottone pubblica issue  o vedi news-->
 
-  <% if @issue.news_id && @issue.news_id > 0 %>
+  <% if  @issue.news_id && @issue.news_id > 0 && !@issue.description.blank? && !@issue.description.nil? %>
       <div style="text-align: center;">
         <hr>
         <% form_for @issue, :url => {:controller => 'issue_moves', :action => 'new', :id => @issue} do |f2| %>
+            <div id="issue_showinfo">
             <p class="published-<%= @issue.is_public_fs?.to_s %>">
-              <%= l("label_reply_published" + @issue.is_public_fs?.to_s).to_sym %> <br/>&nbsp;</p>
+              <%= l("label_reply_published" + @issue.is_public_fs?.to_s).to_sym %> </p>
 
             <% if authorize_for('move_issues', 'news_fast_reply') || User.current.admin? || User.current.ismanager? %>
                 <%= f2.submit(l(:button_issue_reply_article), :class => "button-blu") unless @issue.is_public_fs? %>
             <% end %>
-
             <% if  @issue.is_public_fs? %>
-                <%= link_to l(:button_news_from_issue), news_path(@issue.news_id), :class => "button-grey" %>
+                  <div><%= link_to(@issue.project.name, project_path(@issue.project)) %> <br> &nbsp; </div>
+                  <%= link_to l(:button_news_from_issue) , news_path(@issue.news_id), :class => "button-grey" %>
             <% end %>
+              <br />
+            </div>
         <% end %>
       </div>
   <% end %>
