--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -36,12 +36,11 @@
 
   <div id="attributes" class="attributes">
     <%= render :partial => 'issues/attributes' %>
-    <%#, :locals => {:project => @project, :issue => @issue}%>
-  </div>
+    <%#, :locals => {:project => @project, :issue => @issue}%>   </div>
 
 
 
-  <% if !@issue.new_record? %>
+  <%# if !@issue.new_record? %>
       <br/>
       <b style="margin-left: 10px">
         <% if @issue.is_quesito? && @issue.quesito_news %>
@@ -52,16 +51,17 @@
       </b>
 
       <div id="ck-box-issues"><%= f.cktext_area :description, :height => 800, :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %></div>
-  <% end %>
+  <%# end %>
   <br/>
   <% if @issue.new_record? %>
       <p id="attachments_form"><%= label_tag('attachments[1][file]', l(:label_attachment_plural)) %><%= render :partial => 'attachments/form' %></p>
   <% end %>
-</div>
+
 <br/>
 <hr> <br/>
+<div style="width:56%; display: inline-block; padding: 1% 3%; float:left;">
 
-<div style="width:56%; display: inline-block; padding: 1% 3%; float:left;" >
+<div>
   <% if @issue.new_record? && User.current.allowed_to?(:add_issue_watchers, @project) -%>
       <p id="watchers_form"><label><%= l(:label_issue_watchers) %></label> <br/><br/></p>
 
@@ -75,3 +75,5 @@
   <div style="display: inline-block; float:left;">
   <%= call_hook(:view_issues_form_details_bottom, {:issue => @issue, :form => f}) %>
 </div>
+</div>
+   </div>
