--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -21,17 +21,20 @@
     <div class="box">
     <%= render :partial => 'issues/form', :locals => {:f => f} %>
     </div>
-    <%= submit_tag l(:button_create) %>
-    <%= submit_tag l(:button_create_and_continue), :name => 'continue' %>
+    <div style="width: 200px; float: left; text-align:center; background-color: #f3f3f3; border: solid 3px #dcdcdc;" ><br />&nbsp;<br />
+    <%= submit_tag l(:button_create), :class => "button-blu" %><br />&nbsp; <br />
+    <%= submit_tag l(:button_create_and_continue), :name => 'continue' , :class => "button-blu"%>
+    <br /> &nbsp; <br />
     <%= link_to_remote l(:label_preview),
                        { :url => preview_issue_path(:project_id => @project),
                          :method => 'post',
                          :update => 'preview',
                          :with => "Form.serialize('issue-form')",
                          :complete => "Element.scrollTo('preview')"
-                       }, :accesskey => accesskey(:preview) %>
+                       }, :accesskey => accesskey(:preview), :class => 'button-grey' %>
 
-    <%= javascript_tag "Form.Element.focus('issue_subject');" %>
+    <%= javascript_tag "Form.Element.focus('issue_subject');" %>      <br /> &nbsp; <br />
+    </div>
 <% end %>
 
 <div id="preview" class="wiki"></div>
